# AcousticNativeModule

./: .gitignore  .project  settings.gradle
acousticlocsdk/: .project  CMakeLists.txt  build.gradle
acousticlocsdk/src/androidTest/java/cn/edu/whu/lmars/acousticlocsdk/: ExampleInstrumentedTest.java
acousticlocsdk/src/main/: AndroidManifest.xml
acousticlocsdk/src/main/cpp/: AcousticsEngine.cpp  AcousticsEngine.h  jni_bridge.cpp
acousticlocsdk/src/main/cpp/player/: PlayingCallback.cpp  PlayingCallback.h
acousticlocsdk/src/main/cpp/recorder/: RecordingCallback.cpp  RecordingCallback.h  SoundRecording.cpp  SoundRecording.h
acousticlocsdk/src/main/cpp/utils/: Utils.h  trace.h
acousticlocsdk/src/main/java/cn/edu/whu/lmars/acousticlocsdk/: AcousticsEngine.java
acousticlocsdk/src/main/res/values/: strings.xml
acousticlocsdk/src/test/java/cn/edu/whu/lmars/acousticlocsdk/: ExampleUnitTest.java
app/: build.gradle
app/src/androidTest/java/cn/edu/whu/lmars/acousticloc/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/cn/edu/whu/lmars/acousticloc/: MainActivity.java
app/src/main/java/cn/edu/whu/lmars/acousticloc/audio/device/: AudioDeviceAdapter.java  AudioDeviceInfoConverter.java  AudioDeviceListEntry.java  AudioDeviceSpinner.java
app/src/main/java/cn/edu/whu/lmars/acousticloc/audio/wave/: AudioWavePainter.java  AudioWaveSurfaceView.java
app/src/main/res/drawable/: ic_bookmark_red_a700_24dp.xml  ic_pause_red_900_24dp.xml  ic_stop_red_900_24dp.xml  toggle_button_recording_pause.xml
app/src/main/res/layout/: activity_main.xml  audio_devices.xml  dialog_saving_record.xml
app/src/main/res/values/: dimens.xml  strings.xml
app/src/test/java/cn/edu/whu/lmars/acousticloc/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
